--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header {
 }
 
 
-/*nav a,
+nav a,
 .burger a {
   color: white;
   padding: 5px;
@@ -30,7 +30,7 @@ header {
 nav a:hover,
 .burger a:hover {
   color: #A79E9E;
-}*/
+}
 
 
 /* Menu défilant du Carto */
@@ -193,6 +193,48 @@ body {
 
 }
 
+.pestel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 85vh;
+}
+
+.pestel article {
+  margin: 40px;
+  text-align: justify;
+}
+
+.pestel article h2 {
+  text-decoration: underline;
+  font-family: system-ui;
+}
+
+.pestel article p {
+  font-family: sans-serif;
+  text-indent: 20px;
+}
+
+.pestel>div>article {
+  background-color: #c0bcbc;
+  padding: 10px 10px 10px 10px;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+
+/* vw = pourcentage en fonction de la largeur de la fenetre */
+.analyse .pestel div:nth-child(odd) article {
+  margin-left: 20vw;
+  position: relative;
+  left: 0;
+}
+
+.analyse .pestel div:nth-child(even) article {
+  margin-right: 20vw;
+  position: relative;
+  right: 0;
+}
 
 fieldset {
   margin-top: 20px;
@@ -499,19 +541,7 @@ main {
   background-color: #feebdd;
 }
 
-.groupe-acteurs1 h2 {
-  color: #2c3e50;
-  margin-bottom: 1em;
-}
-.groupe-acteurs2 h2 {
-  color: #2c3e50;
-  margin-bottom: 1em;
-}
-.groupe-acteurs3 h2 {
-  color: #2c3e50;
-  margin-bottom: 1em;
-}
-.groupe-acteurs4 h2 {
+.groupe-acteurs h2 {
   color: #2c3e50;
   margin-bottom: 1em;
 }
@@ -519,18 +549,6 @@ main {
 .groupe-acteurs p {
   line-height: 1.6;
   color: #34495e;
-}
-
-body, html {
-  margin: 0;
-  padding: 0;
-  
-}
-#figureMindMap {
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Centre l'image et la légende */
-  text-align: center; /* Centre le texte de la légende */
 }
 
 /* frise chronologique 
